--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <nav>
           <ul>
             <li><a href="/">Home</li></a>
-            <li><a href="/about.html">About</li></a>
-            <li><a href="/skills.html">Skills</li></a>
-            <li><a href="/projects.html">Projects</li></a>
-            <li><a href="/contact.html">Contact</li></a>
+            <li><a href="/portfolio/about.html">About</li></a>
+            <li><a href="/portfolio/skills.html">Skills</li></a>
+            <li><a href="/portfolio/projects.html">Projects</li></a>
+            <li><a href="/portfolio/contact.html">Contact</li></a>
           </ul>
         </nav>
       </div>
